# archinstall-aur

./: README.md  archinstall-aur.py  setup.cfg  setup.py
archinstall_aur/: __init__.py
