[metadata]
name = archinstall-aur-plugin
version = attr: archinstall_aur.__version__
description = Archinstall AUR Plugin
author = Anton Hvornum
author_email = anton@hvornum.se
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL
license_files =
    LICENSE
project_urls =
    Source = https://github.com/Torxed/archinstall-aur
    Documentation = https://archinstall-aur.readthedocs.io/
classifers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux

[options]
packages = find:
python_requires = >= 3.8

[options.entry_points]
archinstall.plugin =
    aur-plugin = archinstall_aur:Plugin